--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="vieport" content="width=device-width,user-scalable=no"
-    <title>Mi primer pagina Web</title>
+    <meta name="author" content="David Rodas">
+    <meta name="description" content="Hoja de Vida de David Rodas">
+    <meta name="vieport" content="width=device-width,user-scalable=no">
+    <title>Mi primer ejercicio en HTML</title>
   </head>
   <body>
-    <p title="Mi primer parrafo">Hola Mundo</p>
+    <p>Este es el primer HTML de: David Rodas</p>
   </body>
 </html>
