--- a/index.html
+++ b/index.html
@@ -5,19 +5,54 @@
     <meta name="author" content="David Rodas">
     <meta name="description" content="Ejercicio de Codificacion 1">
     <meta name="vieport" content="width=device-width,user-scalable=no">
-    <title>Ejercicio de Codificacion 1</title>
+    <title>Ejercicio de Codificacion 2</title>
   </head>
   <body>
     <p>
-      <h1>El Noticiero Next University</h1>
-        <h2>Programas de Tecnología</h2>
-          <h3>Desarrollador Web</h3>
-            <strong><em>Next University</em></strong> lanza su programa de formación <strong>"Desarrollador Web"</strong> con la finalidad de capacitar a personas en las tendencias actuales sobre tecnologías, en el caso de desarrollo web, se basa temas relacionados a la implementación de Front-End con tecnologías y Frameworks, tales como: <em>HTML5,CSS,JavaScript, Boostrap, entre otros.</em>
-          <h3>Android</h3>
-            En <strong><em>Next University</em></strong> te ofrecemos el programa  <strong>Android</strong>  que te da las herramientas necesarias para diseñar e implementar aplicaciones Android para dispositivos móviles, partiendo de un conocimiento básico de <em>Java</em>, utilizando el entorno de desarrollo <em>Android Studio</em>.  Aprenderás los aspectos fundamentales para crear aplicaciones Android interactivas, dinámicas y exitosas utilizando técnicas para el manejo de los recursos, datos, segundos planos, localización, sensores, animaciones, gráficos, multimedia y monetización.
-        <h2>Programa de Negocio</h2>
-          <h3>Mercadeo Digital</h3>
-            <strong><em>Next University</em></strong> coloca a tu disposición de programa de <strong>“Mercadeo Digital"</strong>. Sabías que... Mearcadeo Digital o Digital Marketing es mucho más que hacer y publicar anuncios. Se trata del consumidor y la estrategia de negocio. Estos son los puntos de partida para que cualquier acción de mercadeo digital <em>sea exitosa y optimice la inversión</em>. Este certificado, es un programa completo y práctico, que permite entender al consumidor, la industria, la competencia y los retos del negocio propio; para crear e implementar estrategias a la medida, en diferentes plataformas y medios digitales. Por supuesto, monitoreando los resultados para tomar decisiones en tiempo real.
+      <h1>Destinos Turisticos</h1>
+        <h2>America</h2>
+        <ol>
+          <li><strong>Argentina</strong></li>
+            <ol>
+              <li><em>Buenos Aires</em></li>
+              <li><em>Bariloche</em></li>
+            </ol>
+          <li><strong>Brasil</strong></li>
+            <ol>
+              <li><em>Rio de Janeiro</em></li>
+              <li><em>Brasilia</em></li>
+            </ol>
+          <li><strong>Chile</strong></li>
+            <ol>
+              <li><em>Santiago</em></li>
+              <li><em>Valparaiso</em></li>
+            </ol>
+          <li><strong>Colombia</strong></li>
+            <ol>
+              <li><em>Bogota</em></li>
+              <li><em>Cartagena de Indias</em></li>
+            </ol>
+          <li><strong>Estados Unidos</strong></li>
+            <ol>
+              <li><em>New York</em></li>
+              <li><em>San Francisco</em></li>
+            </ol>
+          <li><strong>Mexico</strong></li>
+            <ol>
+              <li><em>Cancun</em></li>
+              <li><em>Acapulco</em></li>
+            </ol>
+          <li><strong>Peru</strong></li>
+            <ol>
+              <li><em>Lima</em></li>
+              <li><em>Cuzco</em></li>
+            </ol>
+          <li><strong>Venezuela</strong></li>
+            <ol>
+              <li><em>Margarita</em></li>
+              <li><em>Merida</em></li>
+            </ol>
+        </ol>
     </p>
   </body>
 </html>
