--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="author" content="David Rodas">
-    <meta name="description" content="Ejercicio de Codificacion 2">
+    <meta name="description" content="Ejercicio de Codificacion 3">
     <meta name="vieport" content="width=device-width,user-scalable=no">
-    <title>Ejercicio de Codificacion 2</title>
+    <title>Ejercicio de Codificacion 3</title>
   </head>
   <body>
-
+    <h1><img src="images\concert_logo.png" alt="Logo blog de conciertos" title="Logo blog de conciertos" width=""/>Tu Concierto</h1>
+      <p>Bienvenido a tu blog de conciertos</p>
+      <img src="images\concert.jpg" width="1340"/>
   </body>
 </html>
