--- a/index.html
+++ b/index.html
@@ -5,11 +5,65 @@
     <meta name="author" content="David Rodas">
     <meta name="description" content="Ejercicio de Codificacion 3">
     <meta name="vieport" content="width=device-width,user-scalable=no">
-    <title>Ejercicio de Codificacion 3</title>
+    <title>Ejercicio de Codificacion 4</title>
   </head>
   <body>
-    <h1><img src="images\concert_logo.png" alt="Logo blog de conciertos" title="Logo blog de conciertos" width=""/>Tu Concierto</h1>
-      <p>Bienvenido a tu blog de conciertos</p>
-      <img src="images\concert.jpg" width="1340"/>
+    <h1>Cartelera de Vuelos - Aeropuerto El Mirador</h1>
+      <h2>Llegadas</h2>
+        <table border="1", cellpadding="10", cellspacing="0">
+          <thead>
+            <tr>
+              <td>Aerolinea</td>
+              <td>Nro. de Vuelo</td>
+              <td>Estatus</td>
+              <td>Hora Estimada</td>
+              <td>Puerta</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>AIRLAN</td>
+              <td>355</td>
+              <td>ATERRIZO</td>
+              <td>2:45 PM</td>
+              <td>3</td>
+            </tr>
+            <tr>
+              <td>VIAJR</td>
+              <td>556</td>
+              <td>RETARDADO</td>
+              <td>2:35 PM</td>
+              <td>6</td>
+            </tr>
+            <tr>
+              <td>AEROVUELO</td>
+              <td>1234</td>
+              <td>EN VUELO</td>
+              <td>3:45 PM</td>
+              <td>8</td>
+            </tr>
+          </tbody>
+        </table>
+      <h2>Salidas</h2>
+        <table border="1", cellpadding="10", cellspacing="0">
+          <thead>
+            <tr>
+              <td>Aerolinea</td>
+              <td>Nro. de Vuelo</td>
+              <td>Estatus</td>
+              <td>Hora Estimada</td>
+              <td>Puerta</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>AIRLAN</td>
+              <td>355</td>
+              <td>EMBARCANDO</td>
+              <td>2:15 PM</td>
+              <td>1</td>
+            </tr>
+          </tbody>
+        </table>
   </body>
 </html>
