--- a/index.html
+++ b/index.html
@@ -2,68 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="author" content="David Rodas">
-    <meta name="description" content="Ejercicio de Codificacion 3">
-    <meta name="vieport" content="width=device-width,user-scalable=no">
-    <title>Ejercicio de Codificacion 4</title>
+    <meta name="author" content="DR0AS">
+    <meta des
+    <title></title>
   </head>
   <body>
-    <h1>Cartelera de Vuelos - Aeropuerto El Mirador</h1>
-      <h2>Llegadas</h2>
-        <table border="1", cellpadding="10", cellspacing="0">
-          <thead>
-            <tr>
-              <td>Aerolinea</td>
-              <td>Nro. de Vuelo</td>
-              <td>Estatus</td>
-              <td>Hora Estimada</td>
-              <td>Puerta</td>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>AIRLAN</td>
-              <td>355</td>
-              <td>ATERRIZO</td>
-              <td>2:45 PM</td>
-              <td>3</td>
-            </tr>
-            <tr>
-              <td>VIAJR</td>
-              <td>556</td>
-              <td>RETARDADO</td>
-              <td>2:35 PM</td>
-              <td>6</td>
-            </tr>
-            <tr>
-              <td>AEROVUELO</td>
-              <td>1234</td>
-              <td>EN VUELO</td>
-              <td>3:45 PM</td>
-              <td>8</td>
-            </tr>
-          </tbody>
-        </table>
-      <h2>Salidas</h2>
-        <table border="1", cellpadding="10", cellspacing="0">
-          <thead>
-            <tr>
-              <td>Aerolinea</td>
-              <td>Nro. de Vuelo</td>
-              <td>Estatus</td>
-              <td>Hora Estimada</td>
-              <td>Puerta</td>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>AIRLAN</td>
-              <td>355</td>
-              <td>EMBARCANDO</td>
-              <td>2:15 PM</td>
-              <td>1</td>
-            </tr>
-          </tbody>
-        </table>
+
   </body>
 </html>
